--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.39-1) unstable; urgency=low
+ledgersmb (1.3.39-0wheezy1) wheezy; urgency=low
 
   * New upstream release. (Closes: #732997)
   * Changes to debian/copyright:
@@ -28,7 +28,7 @@ ledgersmb (1.3.39-1) unstable; urgency=low
   * Add empty directory 'UI/logout/' to ledgersmb.lintian-overrides file.
   * Update README.Debian, TODO.Debian, and NEWS.Debian files for new release.
 
- -- Robert James Clay <jame@rocasa.us>  Mon, 21 Apr 2014 17:56:33 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 21 Apr 2014 17:45:56 -0400
 
 ledgersmb (1.3.25-1) unstable; urgency=low
 
