--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ledgersmb (1.3.39-2~1) UNRELEASED; urgency=medium
+
+  * Correct installation of httpd configuration for Apache v2.2 and v2.4.
+    (Closes: #749347)
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 27 May 2014 10:28:11 -0400
+
 ledgersmb (1.3.39-1) unstable; urgency=low
 
   * New upstream release. (Closes: #732997)
