--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,19 @@ Changelog for 1.3 Series
 Initial Release:  Monday, Oct 12 2011
 Supported Presently
 
+Changelog for 1.3.40
+* Updated nginx configuration (Pongracz I)
+* GL account search now will search within descriptions for matches (Chris T)
+* Printing without an invoice number now errors instead of increments (Chris T)
+* Fixed internal server error using cash/payment (Chris T)
+* Fixed #1133 (FX rate changed after selecting part/service) (Pongracz I)
+* Fixed #1078 (Don't populate all empty projects automatically) (Pongracz I)
+* Fixed #1139 (Vendor can show up as default customer in sales order, confusing...) (Pongracz I)
+* Fixed type mismatch between invoice.qty and invoice.allocated (Chris T)
+
+Chris T is Chris Travers
+Pongracz I is Pongracz Istvan
+
 Changelog for 1.3.39
 * Fixed Internal Server Error clicking through ar/ap report (Chris T, 1022)
 * Fixed internal server error deleting part (Chris T, 1027)
@@ -14,6 +27,9 @@ Changelog for 1.3.39
 * Fixed POD syntax errors in five LedgerSMB/* files. (Robert C)
 * Fixed upgrade tests where null pricegrup exists (Chris T)
 * Fixed save button on ar/ap transactions not saving (Chris T, 1097)
+
+Chris T is Chris Travers
+Robert C is Robert Clay
 
 Changelog for 1.3.38
 * Fixed AR/AP transactions resetting currency/exchange rate (Chris T)
