--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ledgersmb (1.3.40~rc1-1~1) UNRELEASED; urgency=medium
+ledgersmb (1.3.40~rc2-1~1) UNRELEASED; urgency=medium
 
   * New upstream release.
-  * Correct installation of httpd configuration for Apache v2.2 and v2.4.
+  * Correct installation of httpd configuration files for Apache v2.2 and v2.4.
     (Closes: #749347)
 
- -- Robert James Clay <jame@rocasa.us>  Fri,  6 Jun 2014 12:43:28 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 10 Jun 2014 13:49:28 -0400
 
 ledgersmb (1.3.39-1) unstable; urgency=low
 
