--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,4 +1,4 @@
-ledgersmb (1.3.39-1) unstable; urgency=low
+ledgersmb (1.3.40-1) unstable; urgency=low
 
   Language specific HTML, LaTeX, and Text templates can be edited online but
   the language specific directory (like /var/ledgersmb/templates/demo/en_US)
@@ -7,13 +7,10 @@ ledgersmb (1.3.39-1) unstable; urgency=low
   An experimental dbconfig/debconf for configuring LedgerSMB during the package
   installation is available. Because it is experimental, the default is to not
   use it; instead what can be done is to manually create the ledgersmb database
-  user and use that in the http://localhost/ledgersmb/setup.pl script to create
+  user and use that on the http://localhost/ledgersmb/setup.pl page to create
   the company databases for use. More information regarding this is available
   in /usr/share/doc/ledgersmb/README.Debian.
 
-  The contrib_dir configuration in /etc/ledgersmb/ledgersmb.conf now defaults
-  to being for Postgresql 9.3, and should be updated if being used with a
-  different version.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 05 Apr 2014 13:27:08 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 21 Jun 2014 10:42:27 -0400
 
