--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,14 @@
-ledgersmb (1.3.40-1~2) UNRELEASED; urgency=medium
+ledgersmb (1.3.40-1) unstable; urgency=medium
 
   * New upstream release.
-    - 'Duplicate entry' fixed in the locale/po/es_AR.po file.
+    - 'Duplicate entry' error fixed in the locale/po/es_AR.po file.
   * Rewrite the 'purge' stanza in the debian/ledgersmb.postrm script.
   * Correct package version for the mv_conffile stanzas in maintainer scripts.
   * Add debian/ledgersmb.doc-base.database to register database information.
-  * Correct installation of httpd configuration files for Apache v2.2 and v2.4.
-    (Closes: #749347)
+  * Correct errors installing the httpd configuration files for Apache v2.2 and
+    v2.4. (Closes: #749347)
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 19 Jun 2014 05:29:36 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 21 Jun 2014 16:08:56 +0000
 
 ledgersmb (1.3.39-1) unstable; urgency=low
 
