--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,4 +1,4 @@
-ledgersmb (1.3.40-1) unstable; urgency=low
+ledgersmb (1.3.40-1) unstable; urgency=medium
 
   Language specific HTML, LaTeX, and Text templates can be edited online but
   the language specific directory (like /var/ledgersmb/templates/demo/en_US)
