--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,7 @@ ledgersmb (1.3.40-1) unstable; urgency=medium
   * Correct errors installing the httpd configuration files for Apache v2.2 and
     v2.4. (Closes: #749347)
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 21 Jun 2014 16:08:56 +0000
+ -- Robert James Clay <jame@rocasa.us>  Sat, 21 Jun 2014 13:17:56 -0400
 
 ledgersmb (1.3.39-1) unstable; urgency=low
 
