--- a/debian/TODO
+++ b/debian/TODO
@@ -3,21 +3,39 @@ debian/TODO for LedgerSMB v1.3
 
 ====================================================================================================
 
-- If an automatic configuration is attempted during the package install, the default database
-administrative user 'ledgersmb' is not being configured with the correct permissions. See also:
-https://bugs.launchpad.net/bugs/1078817
-https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=698298
+------------------------------------------------------------------------------------
 
-- http://i18n.debian.org/l10n-pkg-status/l/ledgersmb.html shows the following error:
-msgfmt: found 1 fatal error, "Duplicate message definition in locale/po/es_AR.po"
-https://sourceforge.net/p/ledger-smb/bugs/1096/
+
+- An Ubuntu bug was submitted about setup.pl not working after selecting
+an automatic config during the install and setting a password:
+https://bugs.launchpad.net/bugs/1078817
+- Created a Debian bug for the same issue, # 698298, & pointed the ubuntu bug
+to that. Assigned the ubuntu bug to the Ubuntu LSMB team.
+- The dbconfig-common based database configuration that is being used during
+installations and upgrades needs to be reviewed and improved. It is capable
+of creating the 'ledgersmb' database administrative user but it is not getting
+created with the necessary permissions. It is also apparently automatically
+creating a database named ledgersmb with the current way that user is being
+created, which is not really needed for the application.
+- Investigate dropping the use of dbcommon-config altogether. Debconf already
+gets the necessary admin user and password; only need that in perhaps one
+liners that creates the user as neccessary and sets the password.
+
+-As noted on http://i18n.debian.org/l10n-pkg-status/l/ledgersmb.html, there are
+22 'duplicate message' errors present in locale/po/hu.po. 
+https://sourceforge.net/p/ledger-smb/bugs/1174/
+http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=752063
 
 - A debian/po debconf Japanese translation has been provided. Currently,
 there is no LSMB locale/po/ja.po file. Checked System|Lanaguage|List
-Languages in LSMB 1.3.25: "ja" is not in the default list. It's also not
+Languages in LSMB 1.3.40: "ja" is not in the default list. It's also not
 listed as an available language when editing templates, and presumably
 those lists come from the same source. It can be added manually using
-System|Language|Add Language.
+System|Language|Add Language. 
+
+- Most of the upstream locale/po/* files, and also how they are referenced in
+debian/copyright, need to be reviewed and/or updated.  (LedgerSMB.pot was
+updated with LedgerSMB v1.3.40.)
 
 - Upstream uses pdflatex to create the distribution LedgerSMB-manual.pdf from
 the source file doc/manual/LedgerSMB-manual.tex. Use the same source file to
@@ -26,13 +44,21 @@ create an HTML version?
 - Create an HTML and/or PDF file of templateing/templating-guide.tex? And
 then register it with doc-base?
 
-- Add registration of at least database/ledgersmb.html to doc-base?
-
 - Add an installation option for a versioned installation directory name?
 Or add a package build time option to create a versioned package name and
 installation? Or change to using at least binary package names that also
 include info about the version, like "ledgersmb13" or "ledgersmb1.4" or
 "ledgersmb-1.3"?
 
+- Review the tools/* shell and perl scripts to determine what patches may be
+necessary to make them usable on a Debian installation. 
 
- -- Robert James Clay <jame@rocasa.us>  Tue,  7 Apr 2014 09:54:12 -0400
+- Instead of a sym link to point to the /etc/ledgersmb config file(s), 
+patch config file to add '/etc/' to the config file setting. (Would
+the apache config need to be updated to allow that?)
+
+
+
+
+ -- Robert James Clay <jame@rocasa.us>  Thu, 19 Jun 2014 04:21 -0400
+
