--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,14 @@
-ledgersmb (1.3.41~rc2-1~1) unstable; urgency=medium
+ledgersmb (1.3.41-1~1) UNRELEASED; urgency=medium
 
   * New upstream release.
     - 'Duplicate entry' error fixed in the locale/po/es_AR.po file.
   * Rewrite the 'purge' stanza in the debian/ledgersmb.postrm script.
-  * Correct package version for the mv_conffile stanzas in maintainer scripts.
   * Add debian/ledgersmb.doc-base.database to register database information.
+  * Correct package version for the mv_conffile stanzas in maintainer scripts.
   * Correct errors installing the httpd configuration files for Apache v2.2 and
     v2.4. (Closes: #749347)
 
- -- Robert James Clay <jame@rocasa.us>  Thu,  3 Jul 2014 05:07:50 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 16 Jul 2014 14:57:50 -0400
 
 ledgersmb (1.3.39-1) unstable; urgency=low
 
