--- a/debian/changelog
+++ b/debian/changelog
@@ -1,22 +1,29 @@
-ledgersmb (1.3.41-1~3) UNRELEASED; urgency=medium
+ledgersmb (1.3.41-1~4) UNRELEASED; urgency=medium
 
   * New upstream release.
-    - 'Duplicate entry' error fixed in the locale/po/es_AR.po file.
   * Correct a copyright email address in the debian/copyright file.
-  * Rewrite the 'purge' stanza in the debian/ledgersmb.postrm script.
   * Use dh-linktree for embedded libjs-prototype and libjs-libjs-scriptaculous
     libraries.
   * Add libjs-prototype & libjs-scriptaculous to Build-Depends in debian/control.
   * Add texlive-xetex as a 'Suggests' in debian/control.
+  * The contrib_dir setting in 05_confdir.patch only needed for Pg v9.1,
   * Add note regarding texlive-xetex to the debian/README.Debian file.
   * Only include the overrides for the 'custom' empty directories in the
     ledgersmb.lintian-overrides.  
-  * Add debian/ledgersmb.doc-base.database to register database information.
+
+ -- Robert James Clay <jame@rocasa.us>  Thu, 14 Aug 2014 08:18:37 -0400
+
+ledgersmb (1.3.40-1) unstable; urgency=medium
+
+  * New upstream release.
+    - 'Duplicate entry' error fixed in the locale/po/es_AR.po file.
+  * Rewrite the 'purge' stanza in the debian/ledgersmb.postrm script.
   * Correct package version for the mv_conffile stanzas in maintainer scripts.
+  * Add debian/ledgersmb.doc-base.database to register database information.
   * Correct errors installing the httpd configuration files for Apache v2.2 and
     v2.4. (Closes: #749347)
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 31 Jul 2014 11:37:40 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 21 Jun 2014 13:17:56 -0400
 
 ledgersmb (1.3.39-1) unstable; urgency=low
 
