--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,4 +1,4 @@
-ledgersmb (1.3.41-1) unstable; urgency=medium
+ledgersmb (1.3.46~rc2-1) unstable; urgency=medium
 
   Language specific HTML, LaTeX, and Text templates can be edited online but
   the language specific directory (like /var/ledgersmb/templates/demo/en_US)
@@ -12,5 +12,5 @@ ledgersmb (1.3.41-1) unstable; urgency=medium
   in /usr/share/doc/ledgersmb/README.Debian.
 
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 17 Jul 2014 13:25:44 -0400
+ -- Robert James Clay <jame@rocasa.us>  Fri, 31 Oct 2014 13:55:25 -0400
 
