--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.46~rc2-1) testing; urgency=medium
+ledgersmb (1.3.46-1~1) testing; urgency=medium
 
   * New upstream release.
   * Add texlive-xetex as a 'Suggests' in debian/control.
@@ -11,7 +11,7 @@ ledgersmb (1.3.46~rc2-1) testing; urgency=medium
   * Only include the overrides for the 'custom' empty directories in the
     ledgersmb.lintian-overrides.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 01 Nov 2014 12:20:02 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 05 Nov 2014 07:08:20 -0400
 
 ledgersmb (1.3.40-1) unstable; urgency=medium
 
