--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
-ledgersmb (1.3.46-1~1) testing; urgency=medium
+ledgersmb (1.3.46-1~2) testing; urgency=medium
 
-  * New upstream release.
+  * New upstream release. (Closes: #771822)
+	 - Fixes 'Duplicate message' errors in locale/po/hu.po. (Closes: #752063)	  	
   * Add texlive-xetex as a 'Suggests' in debian/control.
+  * Add new Dutch debconf translation. (Closes: #767242)
   * Add libjs-prototype & libjs-scriptaculous to Build-Depends.
   * Correct a copyright email address in the debian/copyright file.
   * Add a note regarding texlive-xetex to the debian/README.Debian file.
@@ -11,7 +13,7 @@ ledgersmb (1.3.46-1~1) testing; urgency=medium
   * Only include the overrides for the 'custom' empty directories in the
     ledgersmb.lintian-overrides.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 05 Nov 2014 07:08:20 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon,  9 Dec 2014 11:12:38 -0400
 
 ledgersmb (1.3.40-1) unstable; urgency=medium
 
