--- a/debian/TODO
+++ b/debian/TODO
@@ -20,21 +20,12 @@ created, which is not really needed for the application.
 gets the necessary admin user and password; only need that in perhaps one
 liners that creates the user as neccessary and sets the password.
 
-- As noted on http://i18n.debian.org/l10n-pkg-status/l/ledgersmb.html, there are
-22 'duplicate message' errors present in locale/po/hu.po. 
-https://sourceforge.net/p/ledger-smb/bugs/1174/
-http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=752063
-
 - A debian/po debconf Japanese translation has been provided. Currently,
 there is no LSMB locale/po/ja.po file. Checked System|Lanaguage|List
 Languages in LSMB 1.3.40: "ja" is not in the default list. It's also not
 listed as an available language when editing templates, and presumably
 those lists come from the same source. It can be added manually using
-System|Language|Add Language. 
-
-- Most of the upstream locale/po/* files, and also how they are referenced in
-debian/copyright, need to be reviewed and/or updated.  (LedgerSMB.pot was
-updated with LedgerSMB v1.3.40.)
+System|Language|Add Language.
 
 - Upstream uses pdflatex to create the distribution LedgerSMB-manual.pdf from
 the source file doc/manual/LedgerSMB-manual.tex. Use the same source file to
@@ -43,19 +34,13 @@ create an HTML version?
 - Create an HTML and/or PDF file of templateing/templating-guide.tex? And
 then register it with doc-base?
 
-- Add an installation option for a versioned installation directory name?
-Or add a package build time option to create a versioned package name and
-installation? Or change to using at least binary package names that also
-include info about the version, like "ledgersmb13" or "ledgersmb1.4" or
-"ledgersmb-1.3"?
+- Now that versions of v1.4 are available; create a new package ledgersmb-1.3,
+for any needed support for v1.3.x versions of LedgerSMB.
 
-- Review the tools/* shell and perl scripts to determine what patches may be
-necessary to make them usable on a Debian installation. 
-
-- Instead of a sym link to point to the /etc/ledgersmb config file(s), 
+- Instead of a sym link to point to the /etc/ledgersmb config file(s),
 patch config file to add '/etc/' to the config file setting. (Would
 the apache config need to be updated to allow that?)
 
 
 
- -- Robert James Clay <jame@rocasa.us>  Thu, 19 Jun 2014 04:21 -0400
+ -- Robert James Clay <jame@rocasa.us>  Thu, 11 Dec 2014 02:33 -0500
