--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ledgersmb (1.3.46-1~3) testing; urgency=medium
+ledgersmb (1.3.46-1) unstable; urgency=medium
 
   * New upstream release. (Closes: #771822)
     - Fixes 'Duplicate message' errors in locale/po/hu.po. (Closes: #752063)
@@ -17,7 +17,7 @@ ledgersmb (1.3.46-1~3) testing; urgency=medium
   * Only include the overrides for the 'custom' empty directories in the
     ledgersmb.lintian-overrides.
 
- -- Robert James Clay <jame@rocasa.us>  Wed, 17 Dec 2014 02:43:32 -0400
+ -- Robert James Clay <jame@rocasa.us>  Wed, 17 Dec 2014 05:08:48 -0500
 
 ledgersmb (1.3.40-1) unstable; urgency=medium
 
