--- a/debian/changelog
+++ b/debian/changelog
@@ -1,18 +1,19 @@
-ledgersmb (1.3.47-1~1) UNRELEASED; urgency=medium
+ledgersmb (1.3.47-1~2) UNRELEASED; urgency=medium
 
   * New upstream release.
-  * Update debhelper version from '8' to '9'.
   * Changes to debian/copyright:
     - Add 'Nick Prater' copyright information.
     - Correct spelling of 'Portugese' to 'Portuguese'.
   * Changes to debian/patches/*:
+    - Create debian/patches/22_SpellingErrors.patch.
+    - Remove unneeded line in debian/patches/20_BashPath.patch.
     - Add 'Origin: vendor' to the debian/patches/*.patch files.
     - Refresh debian/patches/10_httpdconf.patch for updated package.
   * Changes to debian/ledgersmb.postinst:
     - Explicitly do 'db_stop' when operations with debconf have completed.
     - Rewrite how apache 2.4 modules are enabled. (Closes: #800036, LP#1513691)
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 22 Dec 2015 12:54:31 -0500
+ -- Robert James Clay <jame@rocasa.us>  Mon,  4 Jan 2016 14:52:39 -0500
 
 ledgersmb (1.3.46-1~bpo8+1) jessie-backports; urgency=medium
 
