--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,14 @@ Changelog for 1.3 Series
 Initial Release:  Monday, Oct 12 2011
 Supported Presently
 
+Changelog for 1.3.47
+* Fixed bug 1271, default payment account not set on 2nd line (Chris T)
+* Fixed bug 1275, post error due to trying to double encode arry (Chris T)
+* Fixed some errors on some browsers whgo can't handle empty resps (Chris T)
+* Fixed nbv showing blanks instead of numbers before depreciation (Chris T)
+
+Chris T is Chris Travers
+
 Changelog for 1.3.46
 * Fixing bug 1257, ordnumber shows all orders open/closd (Chris T)
 * Fixed bug 1259, id from new_shipto overwrites form-id (Pongracz I)
